# Scientific_Research

./: README.md
BeagleBone_Green/: README.md
BeagleBone_Green/src/Tests/blinky_led/: Cargo.toml
BeagleBone_Green/src/Tests/echo_test/: Cargo.toml
BeagleBone_Green/src/Tests/uart_test/: Cargo.toml
BeagleBone_Green/src/Tests/web_server/: Cargo.toml
BeagleBone_Green/src/full_project/: Cargo.toml
BeagleBone_Green/src/full_project/database/: circuit.db
BeagleBone_Green/src/full_project/src/: circuit_data.rs  database.rs  lcd_display_impl.rs  lib.rs  main.rs  uart.rs  web_server.rs
LAUNCHXL_F28379D/: README.md
LAUNCHXL_F28379D/F28379D_Project/: .ccsproject  .cproject  .project  2837xD_RAM_lnk_cpu1.cmd  F2837xD_Headers_nonBIOS_cpu1.cmd  controllers.c  controllers.h  freeRTOS_Tasks.c  freeRTOS_Tasks.h  main.c  peripheral_Setup.c  peripheral_Setup.h
LAUNCHXL_F28379D/F28379D_Project/Libraries/Common/: F2837xD_Examples.h  F2837xD_GlobalPrototypes.h  F28x_Project.h
LAUNCHXL_F28379D/F28379D_Project/Libraries/Driverlib/: sysctl.c
LAUNCHXL_F28379D/F28379D_Project/Libraries/Source/: F2837xD_DefaultISR.c  F2837xD_Dma.c  F2837xD_ECap.c  F2837xD_EQep.c  F2837xD_Emif.c  F2837xD_I2C.c  F2837xD_Ipc.c  F2837xD_Ipc_Driver.c  F2837xD_Ipc_Driver_Lite.c  F2837xD_Ipc_Driver_Util.c  F2837xD_Mcbsp.c  F2837xD_PieVect.c  F2837xD_Sci.c  F2837xD_Spi.c  F2837xD_TempSensorConv.c  F2837xD_Upp.c  F2837xD_can.c  F2837xD_sci_io.c  F2837xD_sdfm_drivers.c
LAUNCHXL_F28379D/F28379D_Project/Libraries/freeRTOS/: FreeRTOS.h  (+3 more)
LAUNCHXL_F28379D/F28379D_Project/Peripheral/: includes_FirmWare.h
(+29 files in other folders)
